@@ -1,5 +1,7 @@
 
 config.json
+aliases.json
 tlsticket.keys
 cdnboxd.sh
+
 
