@@ -143,11 +143,26 @@ class cdnboxDNSserver extends EventEmitter {
         }
         return null;
       }
+      var lcname = dnspacket.name.toLowerCase();
+      var shortname = lcname.substr(0,dnspacket.name.indexOf('.'));
       if (dnspacket.qclass !== 1 || dnspacket.qtype === 12) {
         dnspacket.setresponsecode(cdnboxDNSPacket.RCODE.NOTIMP);
         log = '';
+      } else if (cdnboxStates.alias.aliases[shortname] !== undefined &&
+                 lcname.endsWith('.' + cdnboxStates.config.dnsserver.domain)) {
+        dnspacket.addsCNAMErecord('answer', dnspacket.name,
+                                  cdnboxStates.alias.aliases[shortname].target + '.' +
+                                  cdnboxStates.config.dnsserver.domain + '.',
+	                          cdnboxStates.alias.ttl);
+        cdnboxStates.totaldnscount.current++;
+	try {
+	  cdnboxStates.aliasstats[shortname].count++;
+	} catch (e) {
+	  cdnboxStates.aliasstats[shortname]= { "count": 1 };
+	}
+        log = 'CNAME ' + cdnboxStates.alias.aliases[shortname].target + '. ';
       } else {
-        log = dnsrequest(remoteaddress.address, dnspacket);
+        log = dnsrequest(remoteaddress.address, dnspacket, shortname);
       }
       cdnboxStates.logconsole('"type": "dns", "client": "' + remoteaddress.address + '", ' +
                   '"qname": "' + dnspacket.name + '", "qtype": ' + dnspacket.qtype +
@@ -211,13 +226,13 @@ function calcdnscount() {
 }
 
 // reponse DNS
-function dnsrequest(remoteaddress, dnspacket) {
+function dnsrequest(remoteaddress, dnspacket, shortname) {
 
   var reqname = dnspacket.name.toLowerCase();
   var country = (cdnboxStates.countryLookup !== null ?
 	           cdnboxStates.countryLookup.get(dnspacket.ecs?dnspacket.ecsnet:remoteaddress) :
 	           null);
-  var log = ', "appli": "' + reqname.substr(0,reqname.indexOf('.')) +
+  var log = ', "appli": "' + shortname +
     '", "country": "' + ((country && country.country)?country.country.iso_code:'none') +
     '", "rcountry": "' + ((country && country.registered_country)?country.registered_country.iso_code:'none') +
     '", "continent": "' + ((country && country.continent)?country.continent.code:'none') + '" ';
@@ -225,10 +240,9 @@ function dnsrequest(remoteaddress, dnspacket) {
   var cbs = cdnboxStates.config.cdnboxes;
   cdnboxStates.totaldnscount.current++;
   if (reqname.endsWith('.' + conf.dnsserver.domain)) {
-
     var answerdata = '';
     var nslist = getnslist(country);
-    var boxname = cdnboxDNSserver.choose(reqname, country);
+    var boxname = cdnboxDNSserver.choose(reqname, country, shortname);
     if (boxname != null) {
       var cdnboxstate = cdnboxStates[boxname];
       if (cdnboxstate.config.targetbw) { cdnboxStates.globaldnscount.current++; }
