@@ -80,6 +80,7 @@ const httpserver = http.createServer((req, res) => {
   // acces limite.
   } else if (req.url.startsWith("/cdn/cdnboxStates") || req.url.startsWith("/cdn/config") ||
              req.url.startsWith("/cdn/cdnboxes") || req.url.startsWith("/cdn/console") ||
+             req.url.startsWith("/cdn/alias") || req.url.startsWith("/cdn/aliasmanager") ||
              req.url.startsWith("/cdn/api/states") || req.url.startsWith("/cdn/status")) {
 
     if (req.method === 'OPTIONS') {
@@ -107,11 +108,11 @@ const httpserver = http.createServer((req, res) => {
       // UI (raw).
       } else if (req.url.startsWith("/cdn/cdnboxes")) {
         res.writeHead(200, { "Content-Type": "text/html", "Access-Control-Allow-Origin": "*" });
-        htmlcdnboxes(req,res);
+        htmlcdnboxes(req, res);
         res.end();
       } else if (req.url.startsWith("/cdn/console")) {
         res.writeHead(200, { 'Content-Type': 'text/html' });
-        htmlconsole(res, buildtoken(req));
+        htmlconsole(req, res);
         res.end();
 
       // config API.
@@ -238,6 +239,43 @@ const httpserver = http.createServer((req, res) => {
             res.end("{ 'message': 'method not allowed.' }");
           }
         }
+
+      // alias
+      } else if (req.url.startsWith("/cdn/aliasmanager")) {
+        res.writeHead(200, { "Content-Type": "text/html", "Access-Control-Allow-Origin": "*" });
+        aliasmanager(res);
+        res.end();
+      } else if (req.url.startsWith("/cdn/alias")) {
+        var aliassrc = fs.readFileSync('./aliases.json');
+        var alias = JSON.parse(aliassrc);
+        if (req.url === "/cdn/alias") {
+          if (req.method === 'GET') {
+            res.writeHead(200, { 'Content-Type': 'application/json', 'Access-Control-Allow-Origin': '*' });
+            res.end(aliassrc);
+          } else if (req.method === 'PUT') {
+            var data = '';
+            req.on('data', (d) => { data += d; } );
+            req.on('end', () => {
+              try {
+                var remconfig = JSON.parse(data);
+		if (remconfig.release !== cdnboxStates.alias.release) {
+		  throw('Alias data has been modified. Update rejected.');
+		}
+		remconfig.release = cdnboxStates.alias.release + 1;
+                cdnboxStates.writealias(remconfig);
+              } catch (err) {
+                res.writeHead(400, { 'Content-Type': 'application/json', 'Access-Control-Allow-Origin': '*' });
+                res.end('{ "message": "cdnbox alias failed: ' + err + '" }');
+                return;
+              }
+              res.writeHead(200, { 'Content-Type': 'application/json', 'Access-Control-Allow-Origin': '*' });
+              res.end('{ "message": "cdnbox aliases updated." }');
+            });
+          } else {
+            res.writeHead(405, { 'Content-Type': 'application/json', 'Access-Control-Allow-Origin': '*' });
+            res.end('{ "message": "error method not allowed"}');
+          }
+        }
       }
     } else {
       res.writeHead(401, { 'Content-Type': 'application/json',
@@ -277,7 +315,7 @@ function htmlcdnboxes(req,res) {
     cdnboxStates.local.status6 = "on";
   }
   res.write(
-      '<html>\n<head>\n<meta charset="utf-8">\n' +
+      '<!DOCTYPE html><html lang="en">\n<head>\n<meta charset="utf-8">\n' +
       '<title>' + cdnboxStates.local.config.name + ' CDNBoxes</title>\n' +
       '<style>' + css + '</style>\n' +
       `<script>
@@ -327,6 +365,30 @@ function htmlcdnboxes(req,res) {
 	     }
 	   }
 	   sessionStorage.setItem('applistats', JSON.stringify(applistats));
+
+  `);
+
+  res.write('      var aliasstats = ' + JSON.stringify(cdnboxStates.aliasstats));
+  res.write(`
+           var memoaliasstats = JSON.parse(sessionStorage.getItem('aliasstats'));
+           var lignes = document.getElementById("talias").getElementsByTagName("tr");
+           for (var i = 0; i < lignes.length; i++) {
+             var cells = lignes[i].getElementsByTagName("td");
+             if (cells.length > 0) {
+               var aliasname = cells[0].innerHTML;
+	       if (aliasstats[aliasname] !== undefined) {
+  `);
+  if (req.url.includes('applisdelta=true')) {
+    res.write(' cells[1].innerHTML = aliasstats[aliasname].count - memoaliasstats[aliasname].count;');
+  } else {
+    res.write(' cells[1].innerHTML = aliasstats[aliasname].count;');
+  }
+  res.write(`
+               }
+             }
+           }
+           sessionStorage.setItem('aliasstats', JSON.stringify(aliasstats));
+
 	 });
        </script>\n` +
       '</head>\n<body>\n' +
@@ -351,7 +413,8 @@ function htmlcdnboxes(req,res) {
       Math.floor(deltatime / 60 % 60) + 'm' + 
       Math.floor(deltatime % 60) + 's </span>' +
       '<span class="memory">Rss: ' + Math.round(process.memoryUsage().rss/1024/1024) + 'Mio</span></div>' +
-      '<div class="head head2"><span class="release">' + cdnboxStates.release + '</span>' +
+      '<div class="head head2"><span class="release">' + cdnboxStates.release + '/' +
+      cdnboxStates.alias.release+ '</span>' +
       '<span class="dnscount">DNS(r/m): ' + Math.round(cdnboxStates.totaldnscount.average) + '</span>' +
       '<span class="dnscount">DNSGT(r/s): ' + cdnboxStates.globaldnscount.last + '/' +
       Math.round(cdnboxStates.globaldnscount.average) + '/' +
@@ -422,25 +485,42 @@ function htmlcdnboxes(req,res) {
     res.write( '</tr>');
   }
   res.write('</table>');
+
+  res.write('<table id="talias" class="aliasstats" style="display:' +
+            (req.url.includes('alias=true')?'table':'none') + '"><tr><th>Alias</th><th>Count</th></tr>');
+  for (const alias of Object.keys(cdnboxStates.alias.aliases)) {
+    res.write(
+        '<tr><td class="name">' + alias + '</td>' +
+        '<td class="total number">-</td></tr>');
+  }
+  res.write('</table>');
+
   res.write('</body>\n</html>');
 }
 
-function htmlconsole(res,token) {
+function htmlconsole(req, res) {
 
+  var token = buildtoken(req);
   res.write(`
-    <html><header><meta charset="utf-8"><title>CDNBoxd Console</title>
+    <!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>CDNBoxd Console</title>
     <script>
     window.addEventListener('DOMContentLoaded', (event) => { refreshframes(); });
     function refreshframes() {
       var framelist = document.getElementsByTagName("iframe");
       var res = framelist[0].src.match(/token=([0-9]+)-[0-9A-Fa-f]+/);
       if (res === null || res.length < 2 || res[1] - 3000 < Date.now()) {
-        return location.reload(true);
+	window.location.assign('console' +
+	  '?cdnboxes=' + document.getElementById('cdnbox').checked +
+          '&applis=' + document.getElementById('applis').checked +
+          '&alias=' + document.getElementById('alias').checked +
+          '&applisdelta=' + document.getElementById('applisdelta').checked);
+        return;
       } else {
         for (var i = 0; i < framelist.length; i++) {
           var url =  framelist[i].src.replace(/\\\?.*$/,"?") + '` + token + `';
           url += '&cdnboxes=' + document.getElementById('cdnbox').checked;
 	  url += '&applis=' + document.getElementById('applis').checked;
+	  url += '&alias=' + document.getElementById('alias').checked;
 	  url += '&applisdelta=' + document.getElementById('applisdelta').checked;
 	  framelist[i].src = url;
         }
@@ -471,6 +551,9 @@ function htmlconsole(res,token) {
       if (document.getElementById('applis').checked) {
         height += ` + (Object.keys(cdnboxStates.config.applis).length * 22 + 31) + `;
       }
+      if (document.getElementById('alias').checked) {
+        height += ` + (Object.keys(cdnboxStates.alias.aliases).length * 22 + 31) + `;
+      }
       obj.height = height;
     }
     function changeframe() {
@@ -485,17 +568,23 @@ function htmlconsole(res,token) {
       refreshframes();
     }
   `);
-  res.write('</script>\n</header>\n<body onload="startautorefresh();">\n');
+  res.write('</script>\n</head>\n<body onload="startautorefresh();">\n');
   res.write(`<div>
       <button type="button" onClick="refreshframes();">Refresh</button>
       <span>Refresh (s): <input type="text" id="refreshtime" value="5" size="5"/></span>
       <button type="button" id="stopaf" onClick="stopautorefresh();">Stop</button>
       <button type="button" id="startaf" onClick="startautorefresh();">Start</button>
-      <input type="checkbox" id="cdnbox" name="cdnbox" checked onchange="changeframe();">
+      <input type="checkbox" id="cdnbox" name="cdnbox"` +
+        (req.url.includes('cdnboxes=true')?'checked':'') + ` onchange="changeframe();">
       <label for="cdnbox">Cdnboxes</label>
-      <input type="checkbox" id="applis" name="applis" onchange="changeframe();">
+      <input type="checkbox" id="applis" name="applis"` +
+        (req.url.includes('applis=true')?'checked':'') + ` onchange="changeframe();">
       <label for="applis">Applis</label>
-      <input type="checkbox" id="applisdelta" name="applis" onchange="changeframe();">
+      <input type="checkbox" id="alias" name="alias"` +
+        (req.url.includes('alias=true')?'checked':'') + ` onchange="changeframe();">
+      <label for="alias">Aliases</label>
+      <input type="checkbox" id="applisdelta" name="applis"` +
+        (req.url.includes('applisdelta=true')?'checked':'') + ` onchange="changeframe();">
       <label for="applisdelta">Derivate</label>
   </div>\n`);
   for (var i=0; i < cdnboxStates.config.cdnboxes.length; i++ ) {
@@ -509,6 +598,90 @@ function htmlconsole(res,token) {
     }
   }
   res.write('\n</body>\n</html>');
+}
+
+function aliasmanager(res) {
+
+  res.write(`
+    <!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>Alias Manager</title>
+    <style>` + css + `</style>
+    <script>
+      function aliasadd() {
+        var node = document.createElement("div");
+	node.innerHTML = '<div class="aliascol"><input type="text" value=""></div> <div class="targetcol"><select>`);
+	      for (var appli of Object.keys(cdnboxStates.config.applis)) {
+                res.write('<option value="' + appli + '">' + appli + '</option>');
+              }
+  res.write(`</select></div><div class="deletecol"><input type="button" value="Delete" onclick="aliasdel(this);"></div>';
+        document.getElementById('aliases').appendChild(node);
+      }
+      function aliasdel(node) {
+        var aliasnode = node.parentElement.parentElement;
+        aliasnode.parentElement.removeChild(aliasnode);
+      }
+      function updatealiases() {
+        var jsondoc = '{';
+	jsondoc += '"release": ' + document.getElementById('release').innerHTML + ',';
+	jsondoc += '"ttl": ' + document.getElementById('ttl').value + ',';
+	var aliases = document.getElementById('aliases').children;
+	jsondoc += '"aliases": {';
+	for (var i=1; i < aliases.length; i++) {
+	  jsondoc += '"' + aliases[i].children[0].children[0].value + '": ' +
+	             '{ "target": "' + aliases[i].children[1].children[0].value + '"}'; 
+	  if (i < aliases.length - 1) jsondoc += ',';
+	}
+	jsondoc += '}}';
+
+	const xhr = new XMLHttpRequest();
+        xhr.onload = () => {
+          alert(JSON.parse(xhr.responseText).message);
+	  window.location = 'aliasmanager';
+        };
+        xhr.open('PUT', 'http://victim3.alebencor.com/cdn/alias');
+        xhr.setRequestHeader('Content-Type', 'application/json');
+        xhr.send(jsondoc);
+
+      }
+    </script>
+    </head>
+    <body>
+      <h1>Alias manager</h1>
+      <form>
+      <div>
+        <span>Release: </span><span id="release">` + cdnboxStates.alias.release + `</span>
+        <label for="ttl">TTL:</label><input type="text" size="5" id="ttl" value="` + cdnboxStates.alias.ttl + `">
+        <input type="button" value="Reload" onclick="window.location = 'aliasmanager';">
+        <input type="button" id="update" value="Update" onclick="updatealiases();">
+      </div>
+      <br/>
+      <div id="aliases">
+      <div><div class="aliascol">Alias</div><div class="targetcol">Target</div><div class="countcol">Count</div></div>
+  `);
+  for (var alias of Object.keys(cdnboxStates.alias.aliases)) {
+    res.write(`<div>
+      <div class="aliascol"><input type="text" disabled=disabled id="` + alias + `" value="` + alias + `"></div>
+      <div class="targetcol"><select>
+    `);
+    for (var appli of Object.keys(cdnboxStates.config.applis)) {
+      res.write('<option value="' + appli + '"' +
+	        (appli == cdnboxStates.alias.aliases[alias].target?' selected=selected':'') +
+	        '>' + appli + '</option>');
+    }
+    res.write(`
+      </select></div>
+      <div class="countcol">` +
+	(cdnboxStates.aliasstats[alias] !== undefined?cdnboxStates.aliasstats[alias].count:'0') +
+      `</div>
+      <div class="deletecol"><input type="button" value="Delete" onclick="aliasdel(this);"></div>
+      </div>
+    `);
+  }
+  res.write(`
+      </div>
+      <div id="addbutton"><input type="button" id="addalias" value="Add" onclick="aliasadd();"></div>
+      </form>
+    </body></html>
+  `);
 }
 
 function buildtoken(req) {
