@@ -183,12 +183,13 @@ class cdnboxDNSPacket {
   }
 
   // adds CNAME record
-  addsCNAMErecord(type, name, data) {
+  addsCNAMErecord(type, name, data, ttl = null) {
     this.inccounter(type);
     this.addsname(name);
     this.adds16b(cdnboxDNSPacket.QTYPE.CNAME);
     this.adds16b(1); // Class IN
-    this.adds32b(this.attl);
+    if (ttl === null) this.adds32b(this.attl);
+    else this.adds32b(ttl);
     var memolength = this.curpos;
     this.adds16b(0); // RDLength 0
     this.addsname(data);
