@@ -42,6 +42,11 @@ cdnboxStates.loadconfig = async function () { return new Promise( async (resolve
 
   // initializing data structs to set default values and avoid lot of tests.
   cdnboxStates.config = JSON.parse(fs.readFileSync('./config.json'));
+  try {
+    cdnboxStates.alias = JSON.parse(fs.readFileSync('./aliases.json'));
+  } catch (e) {
+    cdnboxStates.alias = { "release": 0, "ttl": 300, "aliases": { }};
+  }
   cdnboxStates.release = fs.readFileSync('./release','utf8').trim();
 
   try {
@@ -117,6 +122,24 @@ cdnboxStates.writeconfig = function (config) {
   fs.writeFileSync('./config.json', JSON.stringify(config, null, '  '));
 }
 
+cdnboxStates.writealias = function (config) {
+  // verifications
+  if (config.ttl < 60 || config.ttl > 3600) throw("Alias TTL must be between 60 and 3600.");
+  for (var alias of Object.keys(config.aliases)) {
+    if (cdnboxStates.config.applis[alias] !== undefined) {
+      throw("Alias name " + alias + " must not be an appli name.");
+    }
+    if (!/^[a-z0-9]+$/.test(alias)) {
+      throw("Alias name " + alias + " must contain only lowercase letter and number digit.");
+    }
+    if (cdnboxStates.config.applis[config.aliases[alias].target] === undefined) {
+      throw("Target " + config.aliases[alias].target + " of " + alias + " must be an appli name.");
+    }
+  }
+  fs.writeFileSync('./aliases.json', JSON.stringify(config, null, '  '));
+  cdnboxStates.alias = config;
+}
+
 var cdnboxDNSserver;
 cdnboxStates.init = async function (DNSserverclass, choose) {
 
@@ -136,6 +159,7 @@ cdnboxStates.init = async function (DNSserverclass, choose) {
       cdnboxStates.applistats[appli][cdnbox.name] = { "count": 0 };
     }
   }
+  cdnboxStates.aliasstats = {};
 
   if (lconfig.tlsticketkeys !==  undefined) {
     if (lconfig.tlsticketkeys.ttl ===  undefined) { lconfig.tlsticketkeys.ttl = 86400000; }
@@ -273,6 +297,7 @@ cdnboxStates.getstatevector = function() {
            '"status6":"' + cdnboxState.status6 + '", ' +
            '"localtests":' + JSON.stringify(cdnboxState.localtests) + ', ' +
            '"penalbucket": 0,' +
+           '"aliasrelease": ' + cdnboxStates.alias.release + ',' +
            '"hmac":"' + hash.digest('base64') + '"}';
 }
 
@@ -311,8 +336,37 @@ function putstatevectorobj (data) {
     }
     cdnboxState.pushupdate = Date.now();
     cdnboxState.localtests = (data.localtests === undefined?{}:data.localtests);
+    if (data.aliasrelease > cdnboxStates.alias.release) { replicatealias(data.name); }
 }
 
+function replicatealias(fromcdnbox) {
+  var cdnboxconfig = cdnboxStates[fromcdnbox].config;
+  var options = {
+    protocol: cdnboxconfig.proto, hostname: cdnboxconfig.hostname,
+    path: '/cdn/alias',
+    headers: { "Content-Type": "application/json",
+               "Authorization": cdnboxStates.config.httpserver.authorization }
+  };
+  try {
+    var lreq = (options.protocol == "http:"?http:https).request(options, (lres) => {
+      var data = '';
+      lres.on('data', (d) => { data += d; } );
+      lres.on('end', () => {
+        var remconfig = JSON.parse(data);
+        cdnboxStates.writealias(remconfig);
+      });
+    })
+    .on('error', function (cdnboxconfig) {
+      return function (e) {
+        logerror('"error": "alias replication failed: ' + e.message + ' on ' + cdnboxconfig.name + '"');
+        lreq.abort();
+      }
+    }(cdnboxconfig))
+    .end();
+  } catch (e) {
+    console.error('alias replication error: ' + e.toString());
+  }
+}
 
 cdnboxStates.subscribelocalbw = function(datastring) {
   try {
@@ -701,7 +755,6 @@ cdnboxStates.logerror = logerror;
 var logstream = fs.createWriteStream('', { "fd": process.stdout.fd });
 cdnboxStates.logconsole = function (msg) {
   if (cdnboxStates.config.logjsonobject) {
-//    console.log('{ "@timestamp": "' + (new Date).toISOString() + '", ' + msg + '}');
     logstream.write('{ "@timestamp": "' + (new Date).toISOString() + '", ' + msg + "}\n");
   } else {
     console.log(msg);
