@@ -28,11 +28,10 @@ cdnboxStates.loadconfig().then ( () => {
 });
 
 // choix d'une cdnbox
-function choose(reqname, country) {
-  let applistring = reqname.substr(0,reqname.indexOf('.'));
-  let appli = cdnboxStates.config.applis[applistring];
+function choose(reqname, country, shortname) {
+  let appli = cdnboxStates.config.applis[shortname];
   if (appli === undefined) { return null; }
-  cdnboxStates.applistats[applistring].count++;
+  cdnboxStates.applistats[shortname].count++;
   let appcdnbox = appli[0], boxname = appcdnbox.cdnbox, 
       bestScore = cdnboxStates[boxname].score, status = cdnboxStates[boxname].status;
   if (appcdnbox.fixscore !== undefined) { bestScore = appcdnbox.fixscore; }
@@ -107,7 +106,7 @@ function choose(reqname, country) {
       bestScore = score;
     }
   }
-  cdnboxStates.applistats[applistring][boxname].count++;
+  cdnboxStates.applistats[shortname][boxname].count++;
   return boxname;
 }
 
