@@ -1,3 +1,5 @@
+* 1619907148
+ - introduce aliases.
 * 1619305431
  - introduce derivative for appli stats in console.
 * 1619200646
